# agentlens

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.claude/: CLAUDE.md  mcp.json  settings.json
.github/workflows/: ci.yml  publish.yml
.tools/: README.md  alens
docs/: DEVELOPMENT.md
scripts/: generate-types.py
src/agentlens/: __init__.py  __main__.py  cli.py  runner.py
src/agentlens/capture/: __init__.py  pf.py  redaction.py  targets.py  transparent.py
src/agentlens/export/: formats.py  writer.py
src/agentlens/models/: __init__.py  base.py  enums.py  raw.py
src/agentlens/parsers/: __init__.py
src/agentlens/providers/: __init__.py  _base.py
src/agentlens/proxy/: __init__.py  addon.py  runner.py
src/agentlens/server/: __init__.py  app.py  dependencies.py  event_bus.py
src/agentlens/storage/: __init__.py  database.py  repositories.py
tests/: conftest.py
tests/fixtures/anthropic/: messages.json  messages_mcp.json  messages_streaming.json  messages_thinking.json  messages_tool_use.json
tests/test_capture/: test_redaction.py  test_transparent_helpers.py
tests/test_integration/: test_end_to_end.py
tests/test_parsers/: test_anthropic_parser.py  test_gemini_parser.py  test_openai_completions_parser.py
tests/test_proxy/: test_provider_detect.py  test_sse_split.py
tests/test_server/: test_routes.py  test_websocket.py
tests/test_storage/: test_migrations.py  test_repositories.py
web/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx
web/src/api/: hooks.ts  (+3 more)
(+56 files in other folders)
