[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlens-proxy"
version = "0.1.7"
description = "Profile AI agents by intercepting LLM API traffic through a local MITM proxy"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mitmproxy>=11.0",
    "pydantic>=2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0",
    "typer>=0.15.0",
    "rich>=13.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[project.scripts]
agentlens = "agentlens.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agentlens"]

[tool.hatch.build.targets.wheel.force-include]
"web/dist" = "agentlens/static"

[tool.hatch.build.targets.sdist]
include = ["src/agentlens", "web/dist", "pyproject.toml", "README.md"]

[tool.hatch.build.targets.sdist.force-include]
"web/dist" = "web/dist"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
